--- a/home.html
+++ b/home.html
@@ -4,46 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Management System</title>
-
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="header">OUR NAME</div>
+
+    <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="#">CATALOGUE</a>
-        <a href="#">ABOUT US</a>
+        <a href="/dashboard.html">DASHBOARD</a>
+        <a href="#" id="black">CATALOGUE</a>
+        <a href="#" id="black">ABOUT US</a>
         <a href="#">CONTACT</a>
         <a href="#">LOGIN</a>
-        <a href="#">SIGN UP</a>
+        <a href="#" id="signUp">SIGN UP</a>
     </div>
-    <div class="container">
+
+    <!-- Hero Section -->
+    <div class="hero">
         <h1>OUR NAME BOOKSTORE</h1>
+        <div>
+            <div class="blob">
+                <img src="./images/books (2).png" alt="">
+
+                <div class="circle circle1"></div>
+                <div class="circle circle2"></div>
+                <div class="circle circle3"></div>
+            </div>
+        </div>
+        
         <div class="search-bar">
             <select>
                 <option>All</option>
+                <option>Author</option>
+                <option>Title</option>
+                <option>ISBN</option>
+                <option>Publisher</option>
+                <option>Genre</option>
+                <option>Language</option>
+                <option>Year</option>
             </select>
             <input type="text" placeholder="Search">
         </div>
-        <h2>Trending Books</h2>
-        <div class="trending-books">
-            <button>&#8592;</button>
-            <div class="book">
-                <img src="book-placeholder.png" alt="Book" width="100">
-                <button class="borrow-btn">BORROW</button>
-            </div>
-            <div class="book">
-                <img src="book-placeholder.png" alt="Book" width="100">
-                <button class="borrow-btn">BORROW</button>
-            </div>
-            <div class="book">
-                <img src="book-placeholder.png" alt="Book" width="100">
-                <button class="borrow-btn">BORROW</button>
-            </div>
-            <div class="book">
-                <img src="book-placeholder.png" alt="Book" width="100">
-                <button class="borrow-btn">BORROW</button>
-            </div>
-            <button>&#8594;</button>
-        </div>
+   
     </div>
+
+    <section class="trending-books-section">
+        <h2> Trending Books</h2>
+        <div class="slider-container">
+            <button id="prevBtn" class="nav-btn">&#10094;</button>
+            <div class="slider">
+                <div class="book">
+                    <img src="./images/book1.jfif" alt="Book">
+                    <button class="borrow-btn">BORROW</button>
+                </div>
+                <div class="book">
+                    <img src="./images/book2.jfif" alt="Book">
+                    <button class="borrow-btn">BORROW</button>
+                </div>
+                <div class="book">
+                    <img src="./images/book3.jfif" alt="Book">
+                    <button class="borrow-btn">BORROW</button>
+                </div>
+                <div class="book">
+                    <img src="./images/book4.jfif" alt="Book">
+                    <button class="borrow-btn">BORROW</button>
+                </div>
+                <div class="book">
+                    <img src="./images/book5.jfif" alt="Book">
+                    <button class="borrow-btn">BORROW</button>
+                </div>
+            </div>
+            <button id="nextBtn" class="nav-btn">&#10095;</button>
+        </div>
+    </section>
+
 </body>
 </html>
