add about us, contact page

--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <div class="navbar">
         <a href="/dashboard.html">DASHBOARD</a>
         <a href="#" id="black">CATALOGUE</a>
-        <a href="#" id="black">ABOUT US</a>
-        <a href="#">CONTACT</a>
+        <a href="/About.html" id="black">ABOUT US</a>
+        <a href="/Contact.css">CONTACT</a>
         <a href="#">LOGIN</a>
         <a href="#" id="signUp">SIGN UP</a>
     </div>
