--- a/Account.html
+++ b/Account.html
@@ -6,7 +6,7 @@
     
 </head>
  <body>
-    <img src="https://github.com/SamaaAlaa1/Library-Management-System/blob/main/download%20(4).jpeg">
+    <img src="/download (4).jpeg">
     <form>
 <div>
     <label for="fn">First name :</label>
