--- a/Account.html
+++ b/Account.html
@@ -1,7 +1,9 @@
 <html>
   
 <head>
+    <title>profile</title>
     <a href = "" class="back-button">&#8592;</a>
+    
     <h2>My Account</h2>
     
 </head>
@@ -40,6 +42,12 @@
     <option value="Male">Male</option>
     <option value="female">Female</option>
 </select>
+</div><br>
+  <div>
+    <label for="age">Age :</label>
+
+  <input type="number"minlength="14" maxlength="70" id="age"> 
+  
 </div><br>
 <div>
     <input type="submit" value=" Update">
