--- a/Book_listing.html
+++ b/Book_listing.html
@@ -1,6 +1,7 @@
 <html>
   
 <head>
+  <link rel="style" href="Book-listing.css">
     <h6>Our name</h6>
     <div>
    <title>Book listing</title>
@@ -8,44 +9,45 @@
     </div> 
 </head>
  <body>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book1"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book2"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book3"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book4"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book5"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book6"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book7"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book8"> 
     <button>Borrow</button>
    </div>
-   <div>
+   <div class="Book-Grid">
     <img src="/Book.png" alt="Book9"> 
     <button>Borrow</button>
    </div><br>
  </body> 
  <footer>
+  
     <button>1</button>
     <button>2</button>
     <button>3</button>
