--- a/Book_listing.html
+++ b/Book_listing.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   
 <head>
-  <link rel="style" href="Book-listing.css">
+  <link rel="style" href="/stylelisting.css">
     <h6>Our name</h6>
     <div>
    <title>Book listing</title>
@@ -9,6 +10,7 @@
     </div> 
 </head>
  <body>
+  <div class="booklist">
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book1"> 
     <button>Borrow</button>
@@ -45,6 +47,7 @@
     <img src="/Book.png" alt="Book9"> 
     <button>Borrow</button>
    </div><br>
+  </div>
  </body> 
  <footer>
   
