--- a/login.html
+++ b/login.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login page</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <form action="action_page.php" method="post">
-    <h3 id="welcome">Welcome to WEBSITE</h3>
-    <div id="mail">
-        <!--<label for="email">Email:</label><br>-->
-        <input type="email" id="email" name="email" placeholder="&nbsp;&nbsp;&nbsp;Enter your email" required><br><br>
+    <div id="login-container">
+        <h3 id="welcome">Welcome to WEBSITE</h3>
+        <form action="action_page.php" method="post" id="login-form">
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            
+            <a href="#" id="forgot">Forgot your password?</a>
+
+            <div id="rem">
+                <input type="checkbox" id="remember" name="remember">
+                <label for="remember">Remember me</label>
+            </div>
+
+            <div id="buttons">
+                <button type="submit" id="login">Login</button>
+                <button type="button" id="signup" onclick="location.href='/signup'">Sign Up</button>
+            </div>
+
+            <p id="noacc">Don't have an account? <a href="#">Sign up now</a></p>
+        </form>
     </div>
-    <div id="pass">
-        <!--<label for="password">Password:</label><br>-->
-        <input type="password" id="password" name="password" placeholder="&nbsp;&nbsp;&nbsp;Enter your password" required><br>
-        &nbsp;&nbsp;
-        <a href="#">Forgot your password?</a><br>
-    </div>
-    <button type="submit" id="login">Login</button>
-    <button type="submit" id="signup">SignUp</button>
-    <div id="rem">
-        &nbsp;&nbsp;
-        <input type="checkbox" id="remember" name="remember">
-        <label for="remember">Remember me </label>
-    </div>
-    <h4 id="noacc">&nbsp;&nbsp;&nbsp;&nbsp;Don't have an account?<a href="#">Sign up now </a></h4>
-    <div id="circle1"></div>
-    
 </body>
 </html>
