--- a/Book_listing.html
+++ b/Book_listing.html
@@ -2,11 +2,11 @@
 <html>
   
 <head>
-  <link rel="style" href="/stylelisting.css">
     <h6>Our name</h6>
     <div>
    <title>Book listing</title>
    <input type="search" placeholder="Search">
+   <link rel="stylesheet" href="stylelisting.css">
     </div> 
 </head>
  <body>
