--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="/dashboard.html">DASHBOARD</a>
-        <a href="#" id="black">CATALOGUE</a>
+        <a href="/BookDetails.html" id="black">CATALOGUE</a>
         <a href="/About.html" id="black">ABOUT US</a>
-        <a href="/Contact.css">CONTACT</a>
-        <a href="#">LOGIN</a>
-        <a href="#" id="signUp">SIGN UP</a>
+        <a href="/Contact.html">CONTACT</a>
+        <a href="/login.html">LOGIN</a>
+        <a href="/signup.html" id="signUp">SIGN UP</a>
     </div>
 
     <!-- Hero Section -->
