--- a/Book_listing.html
+++ b/Book_listing.html
@@ -2,11 +2,11 @@
 <html>
   
 <head>
+  <link rel="stylesheet" href="stylelisting.css">
     <h6>Our name</h6>
     <div>
    <title>Book listing</title>
-   <input type="search" placeholder="Search">
-   <link rel="stylesheet" href="stylelisting.css">
+   <input class="search-bar" type="search" placeholder="Search">
     </div> 
 </head>
  <body>
@@ -51,11 +51,11 @@
  </body> 
  <footer>
   
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
+    <button class="circlebtn">1</button>
+    <button class="circlebtn">2</button>
+    <button class="circlebtn">3</button>
     <span class="dots">...</span>
-    <button>7</button>
+    <button class="circlebtn">7</button>
  </footer> 
 
 </html>
