--- a/Account.html
+++ b/Account.html
@@ -4,10 +4,11 @@
     <title>profile</title>
     <a href = "" class="back-button">&#8592;</a>
     <h2>My Account</h2>
+    <link rel="stylesheet" href="account.css">
     
 </head>
  <body>
-    <img src="/download (4).jpeg">
+    <img src="/user.jpeg">
     <form>
 <div>
     <label for="fn">First name :</label>
