--- a/dashboard.html
+++ b/dashboard.html
@@ -9,9 +9,9 @@
 
     <div class="navbar">
         <a href="#">DASHBOARD</a>
-        <a href="#">CATALOGUE</a>
-        <a href="#">ABOUT US</a>
-        <a href="#">CONTACT</a>
+        <a href="/Book_listing.html">CATALOGUE</a>
+        <a href="/About.html">ABOUT US</a>
+        <a href="/Contact.html">CONTACT</a>
         <img src="menu icon.jpg" style="height: 30px; width: 30px;">
     </div>
 
