--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="/dashboard.html">DASHBOARD</a>
-        <a href="/BookDetails.html" id="black">CATALOGUE</a>
+        <a href="/Book_listing.html" id="black">CATALOGUE</a>
         <a href="/About.html" id="black">ABOUT US</a>
         <a href="/Contact.html">CONTACT</a>
         <a href="/login.html">LOGIN</a>
@@ -20,7 +20,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>OUR NAME BOOKSTORE</h1>
+        <h1>OUR BOOKSTORE</h1>
         <div>
             <div class="blob">
                 <img src="./images/books (2).png" alt="">
