--- a/signup.html
+++ b/signup.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Signup Page</title>
-    <link rel="stylesheet" href="signup.css">
+  <title>Signup Page</title>
+  <link rel="stylesheet" href="signup.css">
 </head>
 <body>
-    <div id="signup-container">
-        <h3 id="welcome">Create Your Account</h3>
-        <form action="/signup" method="post" id="signup-form">
-            <input type="email" id="email" name="email" required placeholder="Enter your email">
-            <input type="text" id="username" name="username" required placeholder="Choose a username">
-            <input type="password" id="password" name="password" required placeholder="Enter your password">
-            <input type="password" id="confirm-password" name="confirm-password" required placeholder="Re-enter your password">
-            
-            <label id="agree">
-                <input type="checkbox" name="terms" required>
-                I agree to the <a href="#">Terms and Conditions</a>
-            </label>
-            <p id="acc">Already have an account? <a href="/login">Log in here</a></p>
+<div id="signup-container">
+  <h3 id="welcome">Create Your Account</h3>
+  <form action="#" method="post" id="signup-form">
+    <input type="email" id="email" name="email" required placeholder="Enter your email">
+    <input type="text" id="username" name="username" required placeholder="Choose a username">
+    <input type="password" id="password" name="password" required placeholder="Enter your password">
+    <input type="password" id="confirm-password" name="confirm-password" required placeholder="Re-enter your password">
 
-            <button type="submit" id="signup-button">Sign Up</button>
-        </form>
+    <label id="agree">
+      <input type="checkbox" name="terms" required>
+      I agree to the <a href="#">Terms and Conditions</a>
+    </label>
+    <p id="acc">Already have an account? <a href="login.html">Log in here</a></p>
 
-        <div id="circle1"></div>
-    </div>
+    <button type="submit" id="signup-button">Sign Up</button>
+  </form>
+
+  <div id="circle1"></div>
+</div>
+<script src="storage.js"></script>
+<script src="signup.js"></script>
+
+
 </body>
 </html>
