--- a/Book_listing.html
+++ b/Book_listing.html
@@ -3,13 +3,18 @@
   
 <head>
   <link rel="stylesheet" href="stylelisting.css">
-    <h6>Our name</h6>
+    
+    <div class="header">
+      <img src="images/left-arrow.png" alt="arrow" >
+      <span >Our Name</span>
+    </div>
     <div>
    <title>Book listing</title>
-   <input class="search-bar" type="search" placeholder="Search">
+   <input class="search-bar" type="search" placeholder="Search ">
     </div> 
 </head>
  <body>
+ 
   <div class="booklist">
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book1"> 
