--- a/Book_listing.html
+++ b/Book_listing.html
@@ -8,7 +8,10 @@
       <a href="dashboard.html">
       <img src="images/left-arrow.png" alt="arrow" >
       </a>
-      <span >Our Name</span>
+     <a href="dashboard.html">DASHBOARD</a>
+     <a href="#">CATALOGUE</a>
+     <a href="About.html">ABOUT US</a>
+     <a href="Contact.html">CONTACT</a>
     </div>
     <div>
    <title>Book listing</title>
