--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
 
     <div class="navbar">
         <a href="dashboard.html">DASHBOARD</a>
-        <a href="#">CATALOGUE</a>
+        <a href="Book_listing.html">CATALOGUE</a>
         <a href="#">ABOUT US</a>
         <a href="/Contact.html">CONTACT</a>
         <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;">
