--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 
     <div class="navbar">
         <a href="dashboard.html">DASHBOARD</a>
-        <a href="catalogue.html">CATALOGUE</a>
+        <a href="Book_listing.html">CATALOGUE</a>
         <a href="about.html">ABOUT US</a>
         <a href="contact.html">CONTACT</a>
         <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;">
