--- a/Book_listing.html
+++ b/Book_listing.html
@@ -59,6 +59,7 @@
    </div><br>
   </div>
  </body> 
+  <script src="pagination.js"></script>
  <footer>
   
     <button class="circlebtn">1</button>
