--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,10 @@
   <a href="/Book_listing.html">CATALOGUE</a>
   <a href="/About.html">ABOUT US</a>
   <a href="/Contact.html">CONTACT</a>
-  <img src="menu icon.jpg" style="height: 30px; width: 30px;">
+  <a href="account.html">MY ACCOUNT</a>
+  <a href="login.html">LOGOUT</a>
+
+
 </div>
 
 <div class="container">
