--- a/About.html
+++ b/About.html
@@ -11,13 +11,13 @@
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="#">ABOUT US</a>
-        <a href="/Contact.html">CONTACT</a>
+        <a href="Contact.html">CONTACT</a>
         <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;">
     </div>
 
     <div class="container about">
         <h2>About Our Library</h2>
-        <img src="./books.png" alt="Library" class="about-img">
+        <img src="books.png" alt="Library" class="about-img">
         <p>
             Welcome to our digital library — your gateway to knowledge, creativity, and discovery. Established in 2024, our platform is dedicated to making learning accessible for everyone, everywhere.
         </p>
