--- a/Account.html
+++ b/Account.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<img id="profilePic" src="/download (4).jpeg"><br>
+<img id="profilePic" src="download (4).jpeg"><br>
 <input type="file" id="profilePicInput" accept="image/*"><br><br>
 <form>
     <div>
