--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -11,11 +11,11 @@
     <div class="navbar">
         <div class="navbar-brand">Library Admin</div>
         <div class="navbar-links">
-            <a href="/dashboard.html">DASHBOARD</a>
-            <a href="/Book_listing.html">CATALOGUE</a>
-            <a href="/About.html">ABOUT US</a>
-            <a href="/Contact.html">CONTACT</a>
-            <a href="/login.html">LOGOUT</a>
+            <a href="dashboard.html">DASHBOARD</a>
+            <a href="Book_listing.html">CATALOGUE</a>
+            <a href="About.html">ABOUT US</a>
+            <a href="Contact.html">CONTACT</a>
+            <a href="login.html">LOGOUT</a>
         </div>
     </div>
     <div class="container">
