--- a/dashboard.html
+++ b/dashboard.html
@@ -10,9 +10,9 @@
 
 <div class="navbar">
   <a href="#">DASHBOARD</a>
-  <a href="/Book_listing.html">CATALOGUE</a>
-  <a href="/About.html">ABOUT US</a>
-  <a href="/Contact.html">CONTACT</a>
+  <a href="Book_listing.html">CATALOGUE</a>
+  <a href="About.html">ABOUT US</a>
+  <a href="Contact.html">CONTACT</a>
   <a href="account.html">MY ACCOUNT</a>
   <a href="login.html">LOGOUT</a>
 
