--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="/dashboard.html">DASHBOARD</a>
-        <a href="/Book_listing.html" id="black">CATALOGUE</a>
-        <a href="/About.html" id="black">ABOUT US</a>
-        <a href="/Contact.html">CONTACT</a>
-        <a href="/login.html">LOGIN</a>
-        <a href="/signup.html" id="signUp">SIGN UP</a>
+        <a href="dashboard.html">DASHBOARD</a>
+        <a href="Book_listing.html" id="black">CATALOGUE</a>
+        <a href="About.html" id="black">ABOUT US</a>
+        <a href="Contact.html">CONTACT</a>
+        <a href="login.html">LOGIN</a>
+        <a href="signup.html" id="signUp">SIGN UP</a>
     </div>
 
     <!-- Hero Section -->
