--- a/BookDetails.html
+++ b/BookDetails.html
@@ -3,22 +3,21 @@
 
 <head>
     <link href="BookDetails.css" rel="stylesheet" type="text/css" />
-    <P id="APP_BAR">
-        OUR NAME
-    </P>
+    <div class="head">
+        <a href="Book_listing.html">
+            <img src="images/left-arrow.png" alt="arrow" >
+            </a>
+        <a href="dashboard.html">DASHBOARD</a>
+        <a href="Book_listing.html">CATALOGUE</a>
+        <a href="About.html">ABOUT US</a>
+        <a href="Contact.html">CONTACT</a>
+    </div>
+   
 </head>
 
 <body>
-<P id="FIRST">
-    DASHBOARD &nbsp; CATALOGUE <span id="SECOND">
-      ABOUT US &nbsp; &nbsp;CONTACT
 
-    </span>
-<div class="hamburger">
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
+
 </p>
 <div class="book-container">
     <img id ="bookimg" src="books.png">
