--- a/Book_listing.html
+++ b/Book_listing.html
@@ -15,7 +15,16 @@
     </div>
     <div>
    <title>Book listing</title>
+
+   <div class="search" >
+    <select>
+      <option>ALL</option>
+      <option>AUTHOR</option>
+      <option>Title</option>
+      <option>GENERE</option>
+    </select>
    <input class="search-bar" type="search" placeholder="Search ">
+   </div>
     </div> 
 </head>
  <body>
