--- a/index.html
+++ b/index.html
@@ -51,31 +51,13 @@
         <h2> Trending Books</h2>
         <div class="slider-container">
             <button id="prevBtn" class="nav-btn">&#10094;</button>
-            <div class="slider">
-                <div class="book">
-                    <img src="./images/book1.jfif" alt="Book">
-                    <button class="borrow-btn">BORROW</button>
-                </div>
-                <div class="book">
-                    <img src="./images/book2.jfif" alt="Book">
-                    <button class="borrow-btn">BORROW</button>
-                </div>
-                <div class="book">
-                    <img src="./images/book3.jfif" alt="Book">
-                    <button class="borrow-btn">BORROW</button>
-                </div>
-                <div class="book">
-                    <img src="./images/book4.jfif" alt="Book">
-                    <button class="borrow-btn">BORROW</button>
-                </div>
-                <div class="book">
-                    <img src="./images/book5.jfif" alt="Book">
-                    <button class="borrow-btn">BORROW</button>
-                </div>
+            
+                <div  id="book-slider" class="books-container">
+                    
             </div>
             <button id="nextBtn" class="nav-btn">&#10095;</button>
         </div>
     </section>
-
+<script src="index.js"></script>
 </body>
 </html>
