update book listing

--- a/Book_listing.html
+++ b/Book_listing.html
@@ -69,6 +69,7 @@
   </div>
  </body> 
   <script src="pagination.js"></script>
+  <script src="Book_listing.js"></script>
  <footer>
   
     <button class="circlebtn">1</button>
