--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
 
     <script src="home.js"></script>
     <script src="adminDashboard.js"></script>
+    <script src="DisplayDescription.js"></script>
 </body>
 </html>
