--- a/Book_listing.html
+++ b/Book_listing.html
@@ -68,8 +68,7 @@
    </div><br>
   </div>
  </body> 
-  <script src="pagination.js"></script>
-  <script src="Book_listing.js"></script>
+ 
  <footer>
   
     <button class="circlebtn">1</button>
@@ -77,5 +76,8 @@
     <button class="circlebtn">3</button>
     <span class="dots">...</span>
     <button class="circlebtn">7</button>
- </footer> <script src="./></script>
+    <script src="pagination.js"></script>
+    <!-- <script src="Book_listing.js"></script> -->
+    <script src="DisplayDescription.js"></script>
+ </footer> 
 </html>
