--- a/Book_listing.html
+++ b/Book_listing.html
@@ -77,6 +77,5 @@
     <button class="circlebtn">3</button>
     <span class="dots">...</span>
     <button class="circlebtn">7</button>
- </footer> 
-
+ </footer> <script src="./></script>
 </html>
