--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+  
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="dashboard.html">DASHBOARD</a>
+        <a href="#" id="dashboardLink">DASHBOARD</a>
         <a href="Book_listing.html" id="black">CATALOGUE</a>
         <a href="About.html" id="black">ABOUT US</a>
         <a href="Contact.html">CONTACT</a>
