restructure project folders

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us - Library</title>
-    <link rel="stylesheet" href="Contact.css">
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
 
     <div class="navbar">
+        <a href="../index.html">HOME</a>
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="about.html">ABOUT US</a>
         <a href="contact.html">CONTACT</a>
-        <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;">
+        <!-- <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;"> -->
     </div>
 
     <div class="container contact">
