--- a/pages/signup.html
+++ b/pages/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Signup Page</title>
-  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="../css/signup.css">
 </head>
 <body>
 <div id="signup-container">
@@ -24,8 +24,8 @@
 
   <div id="circle1"></div>
 </div>
-<script src="storage.js"></script>
-<script src="signup.js"></script>
+<script src="../js/storage.js"></script>
+<script src="../js/signup.js"></script>
 
 
 </body>
