--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Management System</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
   
@@ -12,11 +12,11 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="#" id="dashboardLink">DASHBOARD</a>
-        <a href="Book_listing.html" id="black">CATALOGUE</a>
-        <a href="About.html" id="black">ABOUT US</a>
-        <a href="Contact.html">CONTACT</a>
-        <a href="login.html">LOGIN</a>
-        <a href="signup.html" id="signUp">SIGN UP</a>
+        <a href="pages/Book_listing.html" id="black">CATALOGUE</a>
+        <a href="pages/About.html" id="black">ABOUT US</a>
+        <a href="pages/Contact.html">CONTACT</a>
+        <a href="pages/login.html">LOGIN</a>
+        <a href="pages/signup.html" id="signUp">SIGN UP</a>
     </div>
 
     <!-- Hero Section -->
@@ -55,8 +55,8 @@
         </div>
     </section>
 
-    <script src="home.js"></script>
-    <script src="adminDashboard.js"></script>
-    <script src="DisplayDescription.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/adminDashboard.js"></script>
+    <script src="js/DisplayDescription.js"></script>
 </body>
 </html>
