--- a/pages/About.html
+++ b/pages/About.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>About Us - Library</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
 
     <div class="navbar">
+        <a href="../index.html">HOME</a>
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="#">ABOUT US</a>
         <a href="Contact.html">CONTACT</a>
-        <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;">
+        <!-- <img src="menu icon.jpg" alt="Menu" style="height: 30px; width: 30px;"> -->
     </div>
 
     <div class="container about">
         <h2>About Our Library</h2>
-        <img src="books.png" alt="Library" class="about-img">
+        <img src="../images/books.png" alt="Library" class="about-img">
         <p>
             Welcome to our digital library — your gateway to knowledge, creativity, and discovery. Established in 2024, our platform is dedicated to making learning accessible for everyone, everywhere.
         </p>
