--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Book Management</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./adminDahsboard.css">
+    <link rel="stylesheet" href="../css/adminDahsboard.css">
 </head>
 <body>
     <div class="navbar">
         <div class="navbar-brand">Library Admin</div>
         <div class="navbar-links">
+            <a href="../index.html">HOME</a>
             <a href="dashboard.html">DASHBOARD</a>
             <a href="Book_listing.html">CATALOGUE</a>
             <a href="About.html">ABOUT US</a>
@@ -127,6 +128,6 @@
             </form>
         </div>
     </div>
-    <script src="adminDashboard.js" defer></script>
+    <script src="../js/adminDashboard.js" defer></script>
 </body>
 </html>
