--- a/pages/About.html
+++ b/pages/About.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>About Us - Library</title>
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
 
     <div class="navbar">
-        <a href="../index.html">HOME</a>
+        <a href="/index.html">HOME</a>
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="#">ABOUT US</a>
@@ -18,7 +18,7 @@
 
     <div class="container about">
         <h2>About Our Library</h2>
-        <img src="../images/books.png" alt="Library" class="about-img">
+        <img src="/images/books.png" alt="Library" class="about-img">
         <p>
             Welcome to our digital library — your gateway to knowledge, creativity, and discovery. Established in 2024, our platform is dedicated to making learning accessible for everyone, everywhere.
         </p>
