--- a/pages/Account.html
+++ b/pages/Account.html
@@ -4,7 +4,7 @@
 <head>
     <title>profile</title>
     <a href="dashboard.html" class="back-button">&#8592; Back</a><br><br>
-    <link href="../css/account.css" rel="stylesheet" type="text/css" />
+    <link href="/css/account.css" rel="stylesheet" type="text/css" />
 
     <h2>My Account</h2>
 
@@ -59,8 +59,8 @@
     </div>
 
 </form>
-<script src="../js/storage.js"></script>
-<script src="../js/account.js"></script>
+<script src="/js/storage.js"></script>
+<script src="/js/account.js"></script>
 
 </body>
 
