--- a/pages/BookDetails.html
+++ b/pages/BookDetails.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <link href="../css/BookDetails.css" rel="stylesheet" type="text/css" />
+    <link href="/css/BookDetails.css" rel="stylesheet" type="text/css" />
     <div class="head">
         <!-- <a href="Book_listing.html">
             <img src="../images/left-arrow.png" alt="arrow" >
             </a> -->
-        <a href="../index.html">HOME</a>
+        <a href="/index.html">HOME</a>
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="About.html">ABOUT US</a>
@@ -46,7 +46,7 @@
 
 
 
-<script src="../js/DisplayDescription.js"></script>
+<script src="/js/DisplayDescription.js"></script>
 </body>
 
 </html>
