--- a/pages/Book_listing.html
+++ b/pages/Book_listing.html
@@ -2,10 +2,10 @@
 <html>
   
 <head>
-  <link rel="stylesheet" href="../css/stylelisting.css">
+  <link rel="stylesheet" href="/css/stylelisting.css">
     
     <div class="header">
-      <a href="../index.html">HOME</a>
+      <a href="/index.html">HOME</a>
      <a href="dashboard.html">DASHBOARD</a>
      <a href="#">CATALOGUE</a>
      <a href="About.html">ABOUT US</a>
