--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us - Library</title>
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
 
     <div class="navbar">
-        <a href="../index.html">HOME</a>
+        <a href="/index.html">HOME</a>
         <a href="dashboard.html">DASHBOARD</a>
         <a href="Book_listing.html">CATALOGUE</a>
         <a href="about.html">ABOUT US</a>
