--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Management System</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
   
@@ -24,7 +24,7 @@
         <h1>OUR BOOKSTORE</h1>
         <div>
             <div class="blob">
-                <img src="./images/books (2).png" alt="">
+                <img src="images/books (2).png" alt="">
 
                 <div class="circle circle1"></div>
                 <div class="circle circle2"></div>
