--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>User Dashboard</title>
-  <link rel="stylesheet" href="../css/dashboard.css">
+  <link rel="stylesheet" href="/css/dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="navbar">
-    <a href="../index.html">HOME</a>
+    <a href="/index.html">HOME</a>
     <a href="#">DASHBOARD</a>
     <a href="Book_listing.html">CATALOGUE</a>
     <a href="About.html">ABOUT US</a>
@@ -41,8 +41,8 @@
     </div>
   </div>
 
-  <script src="../js/storage.js"></script>
-  <script src="../js/login.js"></script>
-  <script src="../js/dashboard.js"></script>
+  <script src="/js/storage.js"></script>
+  <script src="/js/login.js"></script>
+  <script src="/js/dashboard.js"></script>
 </body>
 </html>
