--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Login Page</title>
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
 <div id="login-container">
@@ -25,8 +25,8 @@
     <p id="noacc">Don't have an account? <a href="signup.html">Sign up now</a></p>
   </form>
 </div>
-<script src="../js/storage.js"></script>
-<script src="../js/login.js" ></script>
+<script src="/js/storage.js"></script>
+<script src="/js/login.js" ></script>
 
 </body>
 </html>
