update user dashboard

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Dashboard</title>
   <link rel="stylesheet" href="/css/dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="navbar">
     <a href="/index.html">HOME</a>
-    <a href="#">DASHBOARD</a>
+    <a href="#" class="active">DASHBOARD</a>
     <a href="Book_listing.html">CATALOGUE</a>
     <a href="About.html">ABOUT US</a>
     <a href="Contact.html">CONTACT</a>
@@ -17,26 +19,63 @@
     <a href="login.html">LOGOUT</a>
   </div>
   
+  <div class="user-welcome">
+    <h1>Welcome, <span id="username-display">User</span>!</h1>
+  </div>
+  
   <div class="container">
     <h2>Available Books</h2>
     <div class="slider-container">
-      <div class="book-wrapper available-list">
-      </div>
+      <button class="slider-nav prev"><i class="fas fa-chevron-left"></i></button>
+      <div class="book-wrapper available-list"></div>
+      <button class="slider-nav next"><i class="fas fa-chevron-right"></i></button>
     </div>
   </div>
   
   <div class="container">
     <h2>Your Borrowed Books</h2>
     <div class="slider-container">
-      <div class="book-wrapper borrowed-list">
-      </div>
+      <button class="slider-nav prev"><i class="fas fa-chevron-left"></i></button>
+      <div class="book-wrapper borrowed-list"></div>
+      <button class="slider-nav next"><i class="fas fa-chevron-right"></i></button>
     </div>
   </div>
   
   <div class="container">
     <h2>Your Favorite Books</h2>
     <div class="slider-container">
-      <div class="book-wrapper favorite-list">
+      <button class="slider-nav prev"><i class="fas fa-chevron-left"></i></button>
+      <div class="book-wrapper favorite-list"></div>
+      <button class="slider-nav next"><i class="fas fa-chevron-right"></i></button>
+    </div>
+  </div>
+
+  <!-- Book Details Modal -->
+  <div class="modal" id="bookDetailsModal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 id="book-modal-title">Book Details</h2>
+        <button class="close-btn">&times;</button>
+      </div>
+      <div class="book-details-content">
+        <div class="book-details-left">
+          <img id="book-modal-image" src="" alt="Book Cover" class="book-modal-cover">
+          <div class="book-actions-modal">
+            <button id="borrow-btn-modal" class="btn btn-primary">
+              <i class="fas fa-book-open"></i> Borrow
+            </button>
+            <button id="favorite-btn-modal" class="btn btn-secondary">
+              <i class="far fa-heart"></i> Favorite
+            </button>
+          </div>
+        </div>
+        <div class="book-details-right">
+          <p><strong>Author:</strong> <span id="book-modal-author"></span></p>
+          <p><strong>Genre:</strong> <span id="book-modal-genre"></span></p>
+          <p><strong>Status:</strong> <span id="book-modal-status"></span></p>
+          <p><strong>Description:</strong></p>
+          <p id="book-modal-description"></p>
+        </div>
       </div>
     </div>
   </div>
