--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body>
+<div class="glass-box"> 
 <div id="signup-container">
   <h3 id="welcome">Create Your Account</h3>
   <form action="#" method="post" id="signup-form">
@@ -23,6 +24,7 @@
   </form>
 
   <div id="circle1"></div>
+</div> 
 </div>
 <script src="/js/storage.js"></script>
 <script src="/js/signup.js"></script>
