--- a/pages/Book_listing.html
+++ b/pages/Book_listing.html
@@ -2,15 +2,27 @@
 <html>
   
 <head>
+ 
   <link rel="stylesheet" href="/css/stylelisting.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     
-    <div class="header">
-      <a href="/index.html">HOME</a>
-     <a href="dashboard.html">DASHBOARD</a>
-     <a href="#">CATALOGUE</a>
-     <a href="About.html">ABOUT US</a>
-     <a href="Contact.html">CONTACT</a>
+  <div class="navbar">
+    <div class="ourname">
+         <h2>CozyShelf</h2>
     </div>
+    <div class="nav">
+        <a href="/index.html">HOME</a>
+        <a href="dashboard.html">DASHBOARD</a>
+        <a href="Book_listing.html">CATALOGUE</a>
+        <a href="about.html" >ABOUT US</a>
+        <a href="contact.html">CONTACT</a>
+    </div>
+</div>
     <div>
    <title>Book listing</title>
 
@@ -30,19 +42,21 @@
   <div class="booklist">
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book1"> 
-    <button>Borrow</button>
-   </div>
+    <button> <i class="fas fa-heart"></i>Borrow</button>
+    
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book2"> 
-    <button>Borrow</button>
+    <button> <i class="fas fa-heart"></i>Borrow</button>
+   
    </div>
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book3"> 
-    <button>Borrow</button>
+    <button> <i class="fas fa-heart"></i>Borrow</button>
+   
    </div>
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book4"> 
-    <button>Borrow</button>
+    <button> <i class="fas fa-heart"></i>Borrow</button>
    </div>
    <div class="Book-Grid">
     <img src="/Book.png" alt="Book5"> 
