--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <p class="quote">The more that you read, the more things you will 
                         know. the more that you learn, the more places you'll go </p>
                     <div class="buttons">
-                        <a href="pages/login.html" class="sign-up">Sign-In</a>
-                        <a href="pages/signup.html" class="Sign-in">Sign-Up</a>
+                        <a href="pages/login.html" class="sign-up" id="signin">Sign-In</a>
+                        <a href="pages/signup.html" class="Sign-in" id="signup" >Sign-Up</a>
+                        <a href="pages/Account.html"class="account"id="accouny" >Account</a> 
+                        <a href="#" class="logout" id="logy">Log-Out</a>
                     </div>    
                 </div>
                 <div class="image">
@@ -35,6 +37,6 @@
                 </div>
             </div>
         </section>
-
+        <script src="/js/begin.js"></script>
     </body>
 </html>
