final inshaa alla

--- a/pages/About.html
+++ b/pages/About.html
@@ -9,11 +9,16 @@
 <body>
 
     <div class="navbar">
-        <a href="/index.html">HOME</a>
-        <a href="dashboard.html">DASHBOARD</a>
-        <a href="Book_listing.html">CATALOGUE</a>
-        <a href="about.html" class="active">ABOUT US</a>
-        <a href="contact.html">CONTACT</a>
+        <div class="ourname">
+             <h2>CozyShelf</h2>
+        </div>
+        <div class="nav">
+            <a href="#">HOME</a>
+            <a href="pages/dashboard.html">DASHBOARD</a>
+            <a href="pages/Book_listing.html">CATALOGUE</a>
+            <a href="pages/about.html" >ABOUT US</a>
+            <a href="pages/contact.html">CONTACT</a>
+        </div>
     </div>
 
     <div class="container about">
