--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -10,14 +10,17 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="/index.html">HOME</a>
-    <a href="#" class="active">DASHBOARD</a>
-    <a href="Book_listing.html">CATALOGUE</a>
-    <a href="About.html">ABOUT US</a>
-    <a href="Contact.html">CONTACT</a>
-    <a href="account.html">MY ACCOUNT</a>
-    <a href="login.html">LOGOUT</a>
-  </div>
+    <div class="ourname">
+         <h2>CozyShelf</h2>
+    </div>
+    <div class="nav">
+        <a href="#">HOME</a>
+        <a href="pages/dashboard.html">DASHBOARD</a>
+        <a href="pages/Book_listing.html">CATALOGUE</a>
+        <a href="pages/about.html" >ABOUT US</a>
+        <a href="pages/contact.html">CONTACT</a>
+    </div>
+</div>
   
   <div class="user-welcome">
     <h1>Welcome, <span id="username-display">User</span>!</h1>
