--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -8,13 +8,18 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="/index.html">HOME</a>
-        <a href="dashboard.html">DASHBOARD</a>
-        <a href="Book_listing.html">CATALOGUE</a>
-        <a href="about.html">ABOUT US</a>
-        <a href="contact.html" class="active">CONTACT</a>
-    </div>
+      <div class="navbar">
+            <div class="ourname">
+                 <h2>CozyShelf</h2>
+            </div>
+            <div class="nav">
+                <a href="pages/index.html">HOME</a>
+                <a href="pages/dashboard.html">DASHBOARD</a>
+                <a href="pages/Book_listing.html">CATALOGUE</a>
+                <a href="pages/about.html" >ABOUT US</a>
+                <a href="pages/contact.html">CONTACT</a>
+            </div>
+        </div>
 
     <div class="container contact">
         <h2>Contact Us</h2>
