--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-brand">Library Admin</div>
-        <div class="navbar-links">
-            <a href="/index.html">HOME</a>
-            <a href="dashboard.html" class="active">DASHBOARD</a>
-            <a href="Book_listing.html">CATALOGUE</a>
-            <a href="about.html">ABOUT US</a>
-            <a href="contact.html">CONTACT</a>
-            <a href="login.html">LOGOUT</a>
+        <div class="ourname">
+             <h2>CozyShelf</h2>
+        </div>
+        <div class="nav">
+            <a href="#">HOME</a>
+            <a href="pages/dashboard.html">DASHBOARD</a>
+            <a href="pages/Book_listing.html">CATALOGUE</a>
+            <a href="pages/about.html" >ABOUT US</a>
+            <a href="pages/contact.html">CONTACT</a>
         </div>
     </div>
 
