--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="buttons">
                         <a href="pages/login.html" class="sign-up" id="signin">Sign-In</a>
                         <a href="pages/signup.html" class="Sign-in" id="signup" >Sign-Up</a>
-                        <a href="pages/Account.html"class="account"id="accouny" >Account</a> 
+                        <a href="pages/Account.html"class="account"id="accounty" >Account</a> 
                         <a href="#" class="logout" id="logy">Log-Out</a>
                     </div>    
                 </div>
@@ -37,6 +37,6 @@
                 </div>
             </div>
         </section>
-        <script src="/js/begin.js"></script>
+        <script src="js/begin.js"></script>
     </body>
 </html>
