--- a/pages/About.html
+++ b/pages/About.html
@@ -14,10 +14,10 @@
         </div>
         <div class="nav">
             <a href="#">HOME</a>
-            <a href="pages/dashboard.html">DASHBOARD</a>
-            <a href="pages/Book_listing.html">CATALOGUE</a>
-            <a href="pages/about.html" >ABOUT US</a>
-            <a href="pages/contact.html">CONTACT</a>
+            <a href="dashboard.html">DASHBOARD</a>
+            <a href="Book_listing.html">CATALOGUE</a>
+            <a href="about.html" >ABOUT US</a>
+            <a href="contact.html">CONTACT</a>
         </div>
     </div>
 
