--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -13,11 +13,11 @@
                  <h2>CozyShelf</h2>
             </div>
             <div class="nav">
-                <a href="pages/index.html">HOME</a>
-                <a href="pages/dashboard.html">DASHBOARD</a>
-                <a href="pages/Book_listing.html">CATALOGUE</a>
-                <a href="pages/about.html" >ABOUT US</a>
-                <a href="pages/contact.html">CONTACT</a>
+                <a href="/index.html">HOME</a>
+                <a href="dashboard.html">DASHBOARD</a>
+                <a href="Book_listing.html">CATALOGUE</a>
+                <a href="about.html" >ABOUT US</a>
+                <a href="contact.html">CONTACT</a>
             </div>
         </div>
 
