--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -15,10 +15,10 @@
     </div>
     <div class="nav">
         <a href="#">HOME</a>
-        <a href="pages/dashboard.html">DASHBOARD</a>
-        <a href="pages/Book_listing.html">CATALOGUE</a>
-        <a href="pages/about.html" >ABOUT US</a>
-        <a href="pages/contact.html">CONTACT</a>
+        <a href="/pages/dashboard.html">DASHBOARD</a>
+        <a href="/pages/Book_listing.html">CATALOGUE</a>
+        <a href="/pages/about.html" >ABOUT US</a>
+        <a href="/pages/contact.html">CONTACT</a>
     </div>
 </div>
   
