--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -9,15 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <div class="navbar">
-        <div class="ourname">
-             <h2>CozyShelf</h2>
+        <div class="navbar-brand">
+            <h2>CozyShelf</h2>
         </div>
-        <div class="nav">
-            <a href="#">HOME</a>
+        <div class="navbar-links">
+            <a href="/index.html">HOME</a>
             <a href="dashboard.html">DASHBOARD</a>
             <a href="Book_listing.html">CATALOGUE</a>
-            <a href="about.html" >ABOUT US</a>
+            <a href="about.html">ABOUT US</a>
             <a href="contact.html">CONTACT</a>
         </div>
     </div>
