--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -11,16 +11,16 @@
 <body>
   <div class="navbar">
     <div class="ourname">
-         <h2>CozyShelf</h2>
+      <h2>CozyShelf</h2>
     </div>
     <div class="nav">
-        <a href="#">HOME</a>
-        <a href="/pages/dashboard.html">DASHBOARD</a>
-        <a href="/pages/Book_listing.html">CATALOGUE</a>
-        <a href="/pages/about.html" >ABOUT US</a>
-        <a href="/pages/contact.html">CONTACT</a>
+      <a href="/index.html">HOME</a>
+      <a href="/pages/dashboard.html">DASHBOARD</a>
+      <a href="/pages/Book_listing.html">CATALOGUE</a>
+      <a href="/pages/about.html">ABOUT US</a>
+      <a href="/pages/contact.html">CONTACT</a>
     </div>
-</div>
+  </div>
   
   <div class="user-welcome">
     <h1>Welcome, <span id="username-display">User</span>!</h1>
